Fix align margins showing on data-position-narrow=fullscreen

--- a/packages/react/src/Dialog/Dialog.module.css
+++ b/packages/react/src/Dialog/Dialog.module.css
@@ -173,10 +173,8 @@
     @media screen and (prefers-reduced-motion: no-preference) {
       animation: Overlay--motion-scaleFade 0.2s cubic-bezier(0.33, 1, 0.68, 1) 1ms 1 normal none running;
     }
-  }
 
-  /* align margins only apply when regular position is center (or absent) */
-  &:not([data-position-regular='left']):not([data-position-regular='right']) {
+    /* align margins only apply when regular position is center */
     &[data-align='top'] {
       margin-top: var(--base-size-64);
     }
@@ -271,6 +269,12 @@
       max-height: 100dvh;
       border-radius: unset !important;
       flex-grow: 1;
+
+      /* reset align margins since fullscreen wins at narrow */
+      &[data-align] {
+        margin-top: 0;
+        margin-bottom: 0;
+      }
 
       @media screen and (prefers-reduced-motion: no-preference) {
         animation: Overlay--motion-scaleFade 0.2s cubic-bezier(0.33, 1, 0.68, 1) 1ms 1 normal none running;
